--- a/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="col-sm-offset-2">
+<div>
     <h2>Completed Lists</h2>
     <ul class="nav nav-pills nav-justified">
         <li class="nav-item">@Html.ActionLink("Open Lists", "ListManagement", "Home", new { @class = "nav-link active" }, null)</li>
