--- a/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "ShowSubscribedList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="col-sm-offset-2">
+<div>
     <h2>Subscribed Lists</h2>
     <ul class="nav nav-pills nav-justified">
         <li class="nav-item">@Html.ActionLink("Open Lists", "ListManagement", "Home", new { @class = "nav-link active" }, null)</li>
