--- a/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
@@ -4,9 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Partial("~/Views/Home/Sidebar.cshtml");
-
-<div class="col-sm-offset-2">
+<div>
     <h2>Add New Subscriber Group</h2>
     @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
     <form>
