--- a/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
@@ -3,9 +3,8 @@
     ViewBag.Title = "EditSubGroup";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@Html.Partial("~/Views/Home/Sidebar.cshtml");
 
-<div class="col-sm-offset-2">
+<div>
     <h2>Edit Subscriber Group</h2>
     @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
 
