--- a/OneListApplication/OneListApplication/Views/Subscriber/SubGroupDetails.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/SubGroupDetails.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "SubGroupDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@Html.Partial("~/Views/Home/Sidebar.cshtml");
-<div class="col-sm-offset-2">
+
+<div>
     <h2>Family Group Details</h2>
     @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
 
