--- a/OneListApplication/OneListApplication/Css/sb-admin.css
+++ b/OneListApplication/OneListApplication/Css/sb-admin.css
@@ -19,6 +19,8 @@ body {
 
 #wrapper {
     padding-left: 0;
+    float:left;
+    width: 80%;
 }
 
 #page-wrapper {
@@ -114,28 +116,23 @@ ul.alert-dropdown {
 
 @media(min-width:768px) {
     .side-nav {
-        position: fixed;
-        top: 51px;
-        left: 225px;
-        width: 225px;
-        margin-left: -225px;
-        border: none;
-        border-radius: 0;
-        overflow-y: auto;
-        background-color: #222;
-        bottom: 0;
-        overflow-x: hidden;
-        padding-bottom: 40px;
+        width: 200px;
     }
 
     .side-nav>li>a {
-        width: 225px;
+        padding: 0 8px;
+        margin-bottom: 10px;
+        text-align:center;
+        border-radius: 15px;
+        line-height: 1.6;
+        font-size: 1.1em;
     }
 
     .side-nav li a:hover,
     .side-nav li a:focus {
         outline: none;
-        background-color: #000 !important;
+        background-color: #222222;
+        color: white;
     }
 }
 
