--- a/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="col-sm-offset-2">
+<div>
     <h2>Subscriber Management</h2>
     @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
 
