--- a/OneListApplication/OneListApplication/Views/Item/_ItemPageTopNav.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/_ItemPageTopNav.cshtml
@@ -1,10 +1,10 @@
-﻿<div class="collapse navbar-collapse navbar-ex1-collapse">
+﻿<div class="col-md-2">
     <ul class="nav navbar-nav side-nav">
         <li class="active">
-            <a class="nav-link active" href="@Url.Action("ItemManagement", "Item")"><i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;&nbsp;All Items</a>
+            <a class="nav-link active" href="@Url.Action("ItemManagement", "Item")"><i class="fa fa-shopping-basket" aria-hidden="true"></i>&nbsp;&nbsp;All Items</a>
         </li>
         <li>
-            <a class="nav-link" href="@Url.Action("CreateItem", "Item")"><i class="fa fa-plus-square-o" aria-hidden="true"></i>&nbsp;&nbsp;Create Item</a>
+            <a class="nav-link" href="@Url.Action("CreateItem", "Item")"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;Create Item</a>
         </li>
         <li>
             <a class="nav-link" href="@Url.Action("ItemCategoryManagement", "Item")"><i class="fa fa-object-group" aria-hidden="true"></i>Categories</a>
