--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                     }
                     @{if (Request.IsAuthenticated)
                         {
-                            <li><a href="@Url.Action("Index", "Profile")"><i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i></a></li>
+                            <li class="profile-icon"><a href="@Url.Action("Index", "Profile")"><i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i></a></li>
                             <li>@Html.ActionLink("Log Out", "Logout", "Home")</li>
                         }
                     }
