--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -110,7 +110,7 @@ footer {
     border-radius: 15px;
     color: white !important;
     line-height:1 !important;
-    padding: 8px;
+    padding: 7px;
     margin-left: 10px;
     transition: 0.5s;
     border: 2px solid black;
@@ -119,7 +119,7 @@ footer {
     border: 2px solid white;
 }
 
-.navbar-right li:nth-child(2){
+.profile-icon{
     width: 40px;
 }
 
