--- a/OneListApplication/OneListApplication/Css/sb-admin.css
+++ b/OneListApplication/OneListApplication/Css/sb-admin.css
@@ -123,7 +123,7 @@ ul.alert-dropdown {
         padding: 0 8px;
         margin-bottom: 10px;
         text-align:center;
-        border-radius: 15px;
+        border-radius: 10px;
         line-height: 1.6;
         font-size: 1.1em;
     }
@@ -131,7 +131,7 @@ ul.alert-dropdown {
     .side-nav li a:hover,
     .side-nav li a:focus {
         outline: none;
-        background-color: #222222;
+        background-color: steelblue;
         color: white;
     }
 }
