--- a/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
@@ -4,9 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+@Html.Partial("~/Views/Subscriber/_SubscriberSideBar.cshtml")
+<div class="col-md-10">
     <h2>Subscriber Management</h2>
-    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
 
     <table class="table">
         <thead>
