--- a/OneListApplication/OneListApplication/Views/Item/CreateItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/CreateItem.cshtml
@@ -7,7 +7,7 @@
 
 @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
 
-<div id="wrapper">
+<div class="col-md-10">
     <h2>CreateItem</h2>
     @using (Html.BeginForm())
     {
