--- a/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "EditItem";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div id="wrapper">
+@Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+<div class="col-md-10">
     <h2>EditItem</h2>
     @using (Html.BeginForm())
     {
