--- a/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<div id="wrapper">
+@Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+<div class="col-md-10">
     <h2>Item Detail</h2>
-    @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
     <div>
         <dl class="dl-horizontal">
             <dt>
