--- a/OneListApplication/OneListApplication/Views/Item/ItemGroupManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemGroupManagement.cshtml
@@ -4,16 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div id="wrapper">
+@Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+<div class="col-md-10">
     <h2>Avaliable Item Groups</h2>
-    <div>
-        <ul class="nav nav-pills nav-justified">
-            <li class="nav-item">@Html.ActionLink("Avaliable Items", "ItemManagement", "Item", new { @class = "nav-link active" }, null)</li>
-            <li class="nav-item">@Html.ActionLink("Create Item", "CreateItem", "Item", new { @class = "nav-link" }, null)</li>
-            <li class="nav-item">@Html.ActionLink("Avaliable Item Group", "ItemGroupManagement", "Item", new { @class = "nav-link" }, null)</li>
-            <li class="nav-item">@Html.ActionLink("Create Item Group", "CreateItemGroup", "Item", new { @class = "nav-link" }, null)</li>
-        </ul>
-    </div>
     <div>
         <ul id="avaItems" ondragstart="">
             <li draggable="true">@Html.ActionLink("Grocery Items", "ItemGroupDetail", "Item")</li>
