--- a/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
@@ -3,15 +3,9 @@
     ViewBag.Title = "ShowCompleteList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div>
+@Html.Partial("~/Views/List/_ListSideBar.cshtml")
+<div class="col-md-10">
     <h2>Completed Lists</h2>
-    <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">@Html.ActionLink("Open Lists", "ListManagement", "Home", new { @class = "nav-link active" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Create List", "CreateList", "List", new { @class = "nav-link" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Completed Lists", "ShowCompleteList", "List", new { @class = "nav-link" }, null)</li>
-        <li class="nav-item">@Html.ActionLink("Subscribed Lists", "ShowSubscribedList", "List", new { @class = "nav-link" }, null)</li>
-    </ul>
     <table class="table">
         <thead class="thead-inverse">
             <tr>
