--- a/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
@@ -4,9 +4,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+@Html.Partial("~/Views/Subscriber/_SubscriberSideBar.cshtml")
+<div class="col-md-10">
     <h2>Add New Subscriber Group</h2>
-    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
+
     <form>
         <div class="form-group row">
             <label for="group-title" class="col-xs-2 col-form-label">Group Title</label>
