--- a/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
@@ -4,10 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+@Html.Partial("~/Views/Subscriber/_SubscriberSideBar.cshtml")
+<div class="col-md-10">
     <h2>Edit Subscriber Group</h2>
-    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
-
     <form>
         <div class="form-group row">
             <label for="list-title" class="col-xs-2 col-form-label">Group Title</label>
