--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -7,11 +7,8 @@
 
 
 <div class="container">
-    <ul class="nav nav-pills col-lg-3 col-lg-offset-5">
+    <h4 class="text-center">Login</h4>
 
-        <li class="active"><a href="#login" aria-controls="login" data-toggle="tab">Login</a></li>
-        <li>@Html.ActionLink("Register", "Register", "Home")</li>
-    </ul>
     <div class="tab-content">
         @*<div class="tab-pane active" id="register">
         <form class="form-signin col-lg-4 col-lg-offset-4">
@@ -23,7 +20,7 @@
                 <button class="btn btn-primary btn-signin" type="submit">Register</button><br />
          </form>
         </div>*@
-        <div class="tab-pane active" id="login">
+     <div class="tab-pane active" id="login">
      @using (Html.BeginForm("Login", "Home",
             new { ReturnUrl = ViewBag.ReturnUrl },
             FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" } ))
@@ -32,25 +29,28 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             @*<form class="form-signin col-lg-4 col-lg-offset-4">*@
-            <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" /><br>
+            <div class="span12 text-center">
+                <i class="fa fa-user-circle-o fa-4x" aria-hidden="true"></i>
+            </div>
             @*<input type="email" class="form-control" placeholder="Email address" required autofocus><br>*@
-            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", @placeholder = "User Name" } })
+            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Username" } })
             @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
             @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Password" } })
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
 
             @*<input type="password" class="form-control" placeholder="Password" required>*@
-            <div id="remember" class="checkbox">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
+            <div class="text-center form-check">
+                <div id="remember" class="checkbox">
+                    <label class="form-check-label">
+                        <input value="remember-me" type="checkbox"> Remember Me
+                    </label>
+                </div>
+                <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
+
+                @Html.ActionLink("Forgot Password", "ForgotPassword", "Home")
             </div>
-            <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
-            @*<a href="#" class="forgot-password">Forgot the password?</a>*@
-            @Html.ActionLink("Forgot Password", "ForgotPassword","Home")
-            @Html.ActionLink("Log In as Admin", "Index", "Admin")
-        @*</form>*@ 
-     }
+            @*</form>*@
+            }
         </div>
     </div>
 </div>
