--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
                     @{if (!Request.IsAuthenticated)
                         {
                             <li>@Html.ActionLink("Log In", "Login", "Home")</li>
+                            <li>@Html.ActionLink("Register", "Register", "Home")</li>
                         }
                     }
  
