fixing build time

--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -14,7 +14,7 @@ body {
     border: 1px solid grey;
 }
 #coupon {
-     border-right:1px solid grey;
+     border-left:1px solid grey;
 }
 li.nav-item {
     background-color: #222222;
