add the change password controller, so user can change password when logged in

--- a/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="col-sm-offset-2">
+@*<div class="col-sm-offset-2">
     <h2>Change Password</h2>
       <table class="table table-inverse" style="float:left ; width:100%">
         <thead>
@@ -33,4 +33,23 @@
         </tbody>
     </table>
     @Html.ActionLink("Return to Profile Information", "Index", "Profile")
-</div>
+</div>*@
+    @using (Html.BeginForm("ChangePassword", "Profile", new { ReturnUrl = ViewBag.ReturnUrl },
+                                                    FormMethod.Post, new { @class = "col-lg-4 col-lg-offset-4" }))
+    { 
+        <h2>Change Password</h2>
+        @Html.AntiForgeryToken()
+        <div class="form-horizontal">
+            <div class="form-group">
+                <input type="text" name="currentPassword" class="form-control" placeholder="Current Password" /><br>
+                @*<label>Password:</label>*@
+                <input type="text" name="password" class="form-control" placeholder="New Password" /><br>
+                @*<label>Password Confirm:</label>*@
+                <input type="text" name="passwordConfirm" class="form-control" placeholder="Confirm Password" /><br />                <input type="submit" value="Submit" />
+                <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
+                <input type="hidden" name="userID" value="@ViewBag.UserID" /><br />
+                @Html.Raw(ViewBag.Result)
+            </div>
+        </div>
+
+    }
