--- a/OneListApplication/OneListApplication/Views/Home/Register.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Register.cshtml
@@ -33,7 +33,7 @@
 
         @*<input type="password" class="form-control" placeholder="Comfirm Password" required><br>*@
         <div class="text-center">
-            <button class="btn btn-primary btn-signin" type="submit">Register</button><br />
+            <button class="btn btn-primary btn-register" type="submit">Register</button><br />
         </div>
         @*</form>*@
         }
