--- a/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
@@ -65,3 +65,8 @@
     <p>The following ERD diagram shows the relationships between our models.</p>
     <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&title=ERDOneList%20v2.0.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12eG1TV2hrWFlibWc%26export%3Ddownload"></iframe>
 </section>
+<section>
+    <h2>WebAPI for External Retail Coupons</h2>
+    <p>The following document shows the scecifications for our Web API, for more information visit: <a href="http://takethisapart.com/onelist/Developer/index"> Developer's API Help</a></p>
+    <iframe frameborder="0" style="width:100%;height:800px;" src="https://drive.google.com/open?id=1gBu6M8tqQXmPKHOPNYv13HTGze-Np4-aRD-jVAoGFhA"></iframe>
+</section>
