changes to categorymanagement

--- a/OneListApplication/OneListApplication/Views/Item/ItemCategoryManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemCategoryManagement.cshtml
@@ -4,31 +4,31 @@
     ViewBag.Title = "ItemCategoryManagement";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+<div class="col-md-10">
+    <h2>All Categories</h2>
 
-<h2>ItemCategoryManagement</h2>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ItemCategoryName)
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ItemCategoryName)
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemCategoryName)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ItemCategoryID }, new { @class = "btn btn-primary" }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ItemCategoryID }, new { @class = "btn btn-primary" }) |
+                    <a class="btn btn-danger" href="@Url.Action("DeleteItem","Item")"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                </td>
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ItemCategoryName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ItemCategoryID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ItemCategoryID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ItemCategoryID })
-        </td>
-    </tr>
-}
-
-</table>
+    </table>
+</div>
