--- a/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
@@ -4,36 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@*<div class="col-sm-offset-2">
-    <h2>Change Password</h2>
-      <table class="table table-inverse" style="float:left ; width:100%">
-        <thead>
-            <tr>
-                <th>Information</th>
-                <th>Value</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><b>Current Password:</b></td>
-                <td><input type="password" /></td>
-            </tr>
-            <tr>
-                <td><b>New Password:</b></td>
-                <td><input type="password" /></td>
-            </tr>
-            <tr>
-                <td><b>Confirm Password:</b></td>
-                <td><input type="password" /></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><button type="submit" class="btn btn-primary">Save New Password</button></td>
-            </tr>
-        </tbody>
-    </table>
-    @Html.ActionLink("Return to Profile Information", "Index", "Profile")
-</div>*@
     @using (Html.BeginForm("ChangePassword", "Profile", new { ReturnUrl = ViewBag.ReturnUrl },
                                                     FormMethod.Post, new { @class = "col-lg-4 col-lg-offset-4" }))
     { 
@@ -41,15 +11,35 @@
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
             <div class="form-group">
-                <input type="text" name="currentPassword" class="form-control" placeholder="Current Password" /><br>
-                @*<label>Password:</label>*@
-                <input type="text" name="password" class="form-control" placeholder="New Password" /><br>
-                @*<label>Password Confirm:</label>*@
-                <input type="text" name="passwordConfirm" class="form-control" placeholder="Confirm Password" /><br />                <input type="submit" value="Submit" />
+                <label>Current Password</label>
+                <div>
+                    <input type="password" name="currentPassword"/><br>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>New Password</label>
+                <div>
+                    <input type="password" name="password"/><br>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Confirm Password</label>
+                <div>
+                    <input type="password" name="passwordConfirm"/><br />  
+                </div>
+            </div>
+            <div class="form-group">
+                <div>
+                    <input type="submit" class="btn btn-primary" value="Submit" />
+                </div>
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" /><br />
-                @Html.Raw(ViewBag.Result)
-            </div>
+                <p class="text-success">
+                    @Html.Raw(ViewBag.Result)
+                </p>
+            </div> 
+            <div class="form-group">
+                @Html.ActionLink("Back to Profile", "Index")
+            </div>              
         </div>
-
     }
