--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -41,48 +41,45 @@
     <div id="page-wrapper">
         <div class="container-fluid">
             <!-- Page Heading -->
-
             <div class="col-lg-8">
-
-
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Welcome back Nick!
+                            Hey, @Html.Raw(User.Identity.Name)
                         </h1>
                     </div>
                 </div>
                 <!-- /.row -->
                 <div class="row" id="listType">
                     <div class="col-md-4 col-sm-12">
-                        <h4>Your Current Opening Lists</h4>
+                        <h4>To Do "List"</h4>
                         <ul>
-                            <li><a href="#">Office supply list</a></li>
-                            <li><a href="#">X-Max gift list</a></li>
-                            <li><a href="#">This week grocery list</a></li>
-                            <li><a href="#">Christmas party list</a></li>
+                            <li><a href="#">Modify List Controller</a></li>
+                            <li><a href="#">Create List Repo</a></li>
+                            <li><a href="#">Create List View</a></li>
+                            <li><a href="#">Design: How to view lists nicely</a></li>
                         </ul>
-                        <a href="#">View More <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <h4>Your Subscribed Lists</h4>
+                        <h4>To Do "Subscriber"</h4>
                         <ul>
-                            <li><a href="#">SSD friday party food list</a></li>
-                            <li><a href="#">November home renovation list</a></li>
-                            <li><a href="#">December banff trip prep list</a></li>
-                            <li><a href="#">December 17th family dinner list</a></li>
+                            <li><a href="#">Modify Subscriber Controller</a></li>
+                            <li><a href="#">Create Subscriber Repo</a></li>
+                            <li><a href="#">Create Subscriber Repo</a></li>
                         </ul>
-                        <a href="#">View More <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <h4>Your Completed Lists</h4>
+                        <h4>Refinement</h4>
                         <ul>
-                            <li><a href="#">Black friday shopping list</a></li>
-                            <li><a href="#">Thomas wedding supply list</a></li>
-                            <li><a href="#">Christmas shopping lsit </a></li>
-                            <li><a href="#">Mom's visiting trip list</a></li>
+                            <li><a href="#">Add Validation/Error message</a></li>
+                            <li><a href="#">Add First Name/Last Name input for register</a></li>
+                            <li><a href="#">User Profile Edit currently not server side validation</a></li>
+                            <li><a href="#">Assign Roles -> generate roles from db to dropdown</a></li>
+                            <li><a href="#">? ItemCategory "edit/details/delete" not working yet</a></li>
+                            <li><a href="#">Clean up codes</a></li>
+                            <li><a href="#">Add repo for codes that's piling up in controllers</a></li>
+
                         </ul>
-                        <a href="#">View More <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- /.row -->
