--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -10,16 +10,6 @@
     <h4 class="text-center">Login</h4>
 
     <div class="tab-content">
-        @*<div class="tab-pane active" id="register">
-        <form class="form-signin col-lg-4 col-lg-offset-4">
-                <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"/>
-                <input type="text" class="form-control" placeholder="Your name" required autofocus><br>
-                <input type="email" class="form-control" placeholder="Email address" required ><br>
-                <input type="password" class="form-control" placeholder="Create Password" required><br>
-                <input type="password" class="form-control" placeholder="Comfirm Password" required><br>
-                <button class="btn btn-primary btn-signin" type="submit">Register</button><br />
-         </form>
-        </div>*@
      <div class="tab-pane active" id="login">
      @using (Html.BeginForm("Login", "Home",
             new { ReturnUrl = ViewBag.ReturnUrl },
@@ -28,18 +18,18 @@
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            @*<form class="form-signin col-lg-4 col-lg-offset-4">*@
             <div class="span12 text-center">
                 <i class="fa fa-user-circle-o fa-4x" aria-hidden="true"></i>
             </div>
-            @*<input type="email" class="form-control" placeholder="Email address" required autofocus><br>*@
-            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Username" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Password" } })
-            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control ", @placeholder = "Username" } })
+            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control ", @placeholder = "Password" } })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
 
-            @*<input type="password" class="form-control" placeholder="Password" required>*@
             <div class="text-center">
+                <div class="text-danger">
+                    @Html.Raw(ViewBag.ErrorMessage)
+                </div>
                 <div id="remember" class="checkbox">
                     <label class="form-check-label">
                         <input value="remember-me" type="checkbox"> Remember Me
@@ -50,7 +40,6 @@
                     @Html.ActionLink("Forgot Password", "ForgotPassword", "Home")
                 </div>
             </div>
-            @*</form>*@
             }
         </div>
     </div>
