--- a/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberSideBar.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberSideBar.cshtml
@@ -5,7 +5,10 @@
             <a class="nav-link active" href="@Url.Action("SubscriberManagement", "Home")"><i class="fa fa-users" aria-hidden="true"></i>All Subscribers</a>
         </li>
         <li>
-            <a class="nav-link" href="@Url.Action("AddSubscriber", "Subscriber")"><i class="fa fa-plus" aria-hidden="true"></i>Add Group</a>
+            <a class="nav-link" href="@Url.Action("AddSubscriberGroup", "Subscriber")"><i class="fa fa-plus" aria-hidden="true"></i>Add Subscriber Group</a>
+        </li>
+        <li>
+            <a class="nav-link" href="@Url.Action("SubscriberGroupManagement", "Subscriber")"><i class="fa fa-object-group" aria-hidden="true"></i>Subscriber Groups</a>
         </li>
     </ul>
 </div>
